--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,19 +1,29 @@
 @import "./var.less";
-html{
-    color:@words;
+
+html {
+    color: @words;
     font-family: "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue",
-    "微软雅黑", sans-serif;
+        "微软雅黑", sans-serif;
     overflow: hidden;
 }
-body{
+
+body {
     overflow: hidden;
     margin: 0;
 }
- 
-a{
+
+a {
     color: inherit;
     text-decoration: none;
-    &:hover{
+
+    &:hover {
         color: @primary;
     }
+}
+
+ul,
+li {
+    padding: 0;
+    margin: 0;
+    list-style: none
 }
