--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,6 +1,8 @@
 @import "./var.less";
 
 html {
+    width: 100%;
+    height: 100%;
     color: @words;
     font-family: "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue",
         "微软雅黑", sans-serif;
@@ -8,6 +10,8 @@ html {
 }
 
 body {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     margin: 0;
 }
