完成首页轮播图

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -6,13 +6,13 @@ html {
     color: @words;
     font-family: "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue",
         "微软雅黑", sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
     margin: 0;
 }
 
