--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,12 @@ html {
   height: 100%;
   color: #373737;
   font-family: "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue", "微软雅黑", sans-serif;
+  overflow: hidden;
 }
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   margin: 0;
 }
 a {
